--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Anirudh S Gopal
 logo: /assets/img/headshot_circle.png
 #description: text below image
-![image alt](https://github.com/AnirudhSGopal/AnirudhSGopal.github.io/blob/1ed25a8ffd0ee8e81fa52bf6e0efdf71f48d3a3d/IMG-20241002-WA0016.jpg)
+![alt text](https://github.com/AnirudhSGopal/AnirudhSGopal.github.io/blob/1ed25a8ffd0ee8e81fa52bf6e0efdf71
+
 
 theme: jekyll-theme-minimal
