--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
 title: Anirudh S Gopal
-logo :https://github.com/AnirudhSGopal/AnirudhSGopal.github.io/blob/c47617af12c87547cb0e8bf098ccbb486aecac36/anirudh028.png
-#/assets/img/headshot_circle.png 
-#description: text below image
+logo :/Assets/anirudh028.png
 
 
 theme: jekyll-theme-minimal
