--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Anirudh S Gopal
+title:  Anirudh S Gopal
 logo: anirudh028.png
 #description: text below image
-show_downloads: true
+#show_downloads: true
 theme: jekyll-theme-minimal
