--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:  Anirudh S Gopal
-logo: anirudh028.png
+title: Anirudh S Gopal
+logo: <img src="anirudh028.png" alt="Anirudh S Gopal Logo" style="max-width: 150px; height: auto;"/>
 
-#theme: jekyll-theme-minimal
+theme: jekyll-theme-minimal
